# JJM-attrition-rate

./: .gitignore  README.md  attrition_analysis.ipynb  attrition_analysis.py  pyproject.toml  requirements.txt  run_all.py  todo.md
api/: main.py
archives/: 01_data_cleaning.py  02_eda.py  02_feature_engineering.py  03_eda.py  04_modeling.py  05_inference.py  attrition_analysis.py
data/: employee_data_features.csv
docker/: metabase-deployment.yaml
docs/: attrition_experimentation.md  data_preparation_and_eda.md  lessons_learned.md  metabase_setup.md  pdf_to_png.py
notebook/: 01_data_cleaning.py  02_eda.py  03_feature_engineering.py  04_modeling.py  05_inference.py
notebooks/: 01_data_cleaning.ipynb  02_eda.ipynb  02_feature_engineering.ipynb  03_eda.ipynb  04_modeling.ipynb  05_inference.ipynb
results/: categorical_summary.csv  chi2_department_vs_attrition.md  correlation_age_monthlyincome.md  feature_importance.csv  feature_monitor.db  missing_values.csv  numeric_summary.csv  predictions.csv  shap_feature_importance.csv  ttest_monthlyincome_by_attrition.md  value_counts.md
src/: data_processing.py  eda_tools.py  feature_engineering.py  inference.py  metabase_prep.py  modeling.py
